--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,94 @@
 /**------- General  -------**/
 * {
-    font-family: "Raleway", sans-serif;
+    font-family: "Roboto", sans-serif;
     list-style: none;
     text-decoration: none;
     scroll-behavior: smooth;
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
     vertical-align: baseline;
 }
 
-s
+body {
+    width: auto;
+    max-width: 375px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    width: 100%;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 63px;
+    background-color: white;
+    box-shadow: 0px 10px 13px -7px rgba(0, 0, 0, 0.9);
+    z-index: 10;
+}
+
+.logo img {
+    width: 197px;
+    height: 36px;
+}
+
+.location {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    background-color: #EAEAEA;
+}
+
+.location i {
+    color: #353535;
+}
+
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    width: 340px;
+    height: 1058px;
+}
+
+
+.card {
+    width: 340px;
+    background-color: white;
+    border-radius: 15px;
+    margin-top: 18px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.199));
+    height: 251px;
+}
+
+.card img {
+    object-fit: cover;
+    width: 100%;
+    height: 70%;
+}
+
+.card h3 {
+    margin: 0px;
+}
+
+.card-title,
+.p {
+    font-size: 15px;
+}
+
+.card-content {}
+
+.card-txt {}
+
+.card-title {}
+
+.card-subtitle {}
+
+.card-heart {}
