--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,12 +1,12 @@
-/***  Variables  ***/
+/**  Variables  **/
 
-$first-color:#9356dc;
+$black : #000;
+$white: #FFF;
+$first-color: #9356dc;
 $second-color: #FF79DA;
 $green-light: #99E2D0;
 $black-grey: #353535;
 $medium-grey :#7e7e7e;
-$black : #000;
-$white: #FFF;
 
-$color-label-font:#008766;
+$color-label-font: #008766;
 $backgroundcolor: #F6F6F6;
