--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,19 +1,27 @@
 @use "_fonts";
-@use "variables";
-@use "mixins";
-@use "keyframes";
+@use "_variables";
+@use "_mixins";
+@use "_keyframes";
 
 
-/*** Général ***/
-
+/** Général **/
+* {
+    list-style: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+}
 
 body {
-    margin: 0;
     background-color: variables.$backgroundcolor;
 }
 
+h1,
 h2 {
-    font-family: 'Roboto-bold';
+    font-family: "Roboto-bold";
     padding-left: 18px;
     margin: 0;
 
@@ -22,11 +30,9 @@ h2 {
     }
 }
 
-
-/*** Header ***/
-
+/** Header **/
 header {
-    height: 113px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +46,6 @@ header {
         align-items: center;
         box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
         z-index: 1;
-
 
         img {
             width: 162px;
@@ -56,42 +61,16 @@ header {
         background-color: #eaeaea;
         height: 50px;
         color: variables.$black-grey;
-        font-family: 'Roboto';
+        font-family: "Roboto";
 
-        span::before {
-            font-family: 'Font-awesome-solid';
-            content: "\f3c5";
+        i {
             padding-right: 17px;
+            color: #353535;
         }
     }
 }
 
-/***     ANIMATION LOADER    ***/
-
-
-.loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    background-color: variables.$white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: fadeout 2700ms forwards;
-
-    i {
-        color: variables.$first-color;
-    }
-}
-
-
-
-
-/*** section presentation ***/
-
+/** Section Presentation **/
 .section-presentation {
     display: flex;
     flex-direction: column;
@@ -99,45 +78,38 @@ header {
     align-items: center;
 
     h1 {
-        font-family: 'Roboto-bold';
+        font-family: "Roboto-bold";
         text-align: center;
         margin: 40px 0px 0px 0px;
         padding: 0 50px 0 50px;
 
         @media screen and (min-width:1440px) {
             font-size: 40px;
-
         }
     }
 
     p {
-        font-family: 'Roboto-light';
+        font-family: "Roboto-light";
         font-size: 18px;
         text-align: center;
         margin: 21px 0 0 0;
 
     }
 
-    a {
+    button {
         display: inline-block;
-        @include mixins.btn-cta;
+        @include mixins.btn-main;
         margin: 31px 0px 57px 0px;
 
-
         &:hover {
-            @include mixins.btn-cta-hoover;
+            @include mixins.btn-main-hover;
         }
     }
 }
 
+/** FONCTIONNEMENT  **/
 
-
-
-
-
-/*******        section functioning    ********/
-
-.section-fonctionning {
+.section-fonctionnement {
     background-color: variables.$white;
     display: flex;
     flex-direction: column;
@@ -148,12 +120,12 @@ header {
         gap: 25px;
     }
 
-    @media screen and (min-width:1440px){
+    @media screen and (min-width:1440px) {
         padding: 50px 180px;
         gap: 25px;
     }
 
-    .cards-fonctionning-content {
+    .cards-fonctionnement-global {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -167,11 +139,11 @@ header {
             justify-content: center;
         }
 
-        .cards-fonctionning {
+        .cards-fonctionnement {
             width: 75%;
             background-color: variables.$backgroundcolor;
             border-radius: 20px;
-            font-family: 'Roboto';
+            font-family: "Roboto";
             padding: 28px 0 28px 34px;
             filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 
@@ -179,7 +151,6 @@ header {
                 min-width: 27%;
             }
 
-            /********         Icones circles   *******/
             &::before {
                 display: inline-block;
                 position: absolute;
@@ -202,9 +173,9 @@ header {
                 content: "3";
             }
 
-            /********         Icones fonctionnement     *******/
-            .ico::before {
-                font-family: 'Font-awesome-solid';
+            /**  Icônes fonctionnement   **/
+            .icon::before {
+                font-family: "Font-Solid";
                 padding-right: 20px;
                 color: variables.$medium-grey;
             }
@@ -223,16 +194,12 @@ header {
                 content: "\f54e";
                 color: variables.$first-color;
                 font-size: 17px;
-
             }
         }
     }
 }
 
-
-
-
-/*** section restaurants ***/
+/** Section Restaurants **/
 
 .section-restaurants {
     display: flex;
@@ -274,7 +241,6 @@ header {
 
             @media screen and (min-width:1024px) {
                 width: 45%;
-
             }
 
             .card-first-section {
@@ -288,16 +254,13 @@ header {
                     max-height: 175px;
                     border-radius: 15px 15px 0 0;
                     object-fit: cover;
-
                 }
 
                 .label {
                     width: 80px;
                     height: 29px;
-                    background-color: variables.$green-light;
-                    color: variables.$color-label-font;
                     border-radius: 2px;
-                    font-family: 'Roboto';
+                    font-family: "Roboto";
                     line-height: 29px;
                     text-align: center;
                     position: absolute;
@@ -305,6 +268,8 @@ header {
                     right: 12px;
                     font-size: 14px;
                     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+                    background-color: variables.$green-light;
+                    color: variables.$color-label-font;
                 }
             }
 
@@ -312,83 +277,27 @@ header {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-                text-decoration: none;
                 color: variables.$black;
-                padding: 0 0 0 16px;
+                padding: 0 0 16px 16px;
 
                 a {
-                    text-decoration: none;
                     color: variables.$black;
                 }
 
                 h3 {
-                    font-family: 'Roboto-bold';
+                    font-family: "Roboto-bold";
                     margin: 16px 0 8px 0;
                 }
 
                 p {
-                    font-family: 'Roboto-light';
+                    font-family: "Roboto-light";
                     font-size: 17px;
                     margin-top: 0;
                 }
             }
-
         }
     }
-
 }
-
-/****************** Animation coeur  *****/
-
-.heart1 {
-    padding: 23px 25px 33px 0;
-
-    .anim {
-        width: 21px;
-        overflow: visible;
-        cursor: pointer;
-    }
-
-    .anim path {
-        fill: url(#myGradient1);
-        stroke: black;
-        stroke-width: 32px;
-        transition: stroke 0.25s ease-in-out;
-    }
-
-    .anim stop {
-        transition: 0.25s ease-in-out;
-    }
-
-    .anim path:hover {
-        stroke: transparent;
-    }
-
-    .anim:hover #myGradient1 stop:first-child {
-        stop-color: #9356DC;
-    }
-
-    .anim:hover #myGradient1 stop:last-child {
-        stop-color: #FF79DA;
-    }
-}
-
-
-.heart2 {
-    padding: 23px 25px 33px 0;
-    @include mixins.myGradient2;
-}
-
-.heart3 {
-    padding: 23px 25px 33px 0;
-    @include mixins.myGradient3;
-}
-
-.heart4 {
-    padding: 23px 25px 33px 0;
-    @include mixins.myGradient4;
-}
-
 
 /*** Footer ***/
 
@@ -409,20 +318,19 @@ footer {
 
     h3 {
         color: variables.$white;
-        font-family: 'Shrikhand', cursive;
+        font-family: "Shrikhand", cursive;
         font-size: 18px;
         margin: 0;
 
         @media screen and (min-width:767px) {
             margin-left: 16px;
-
         }
     }
 
     ul {
         display: flex;
         flex-direction: column;
-        font-family: 'Roboto-light';
+        font-family: "Roboto-light";
         padding: 0;
         gap: 8px;
 
@@ -431,7 +339,6 @@ footer {
             justify-content: flex-end;
             width: 100%;
             margin: 30px 0 0 0;
-
         }
 
         li {
@@ -447,8 +354,8 @@ footer {
             }
         }
 
-        .ico-ustensils {
-            font-family: 'Roboto';
+        .ico-tools {
+            font-family: "Roboto";
 
             @media screen and (min-width:767px) {
                 min-width: 16%;
@@ -456,15 +363,15 @@ footer {
             }
         }
 
-        .ico-ustensils::before {
-            font-family: 'Font-awesome-solid';
+        .ico-tools::before {
+            font-family: "Font-Solid";
             content: "\f2e7";
             padding-right: 10px;
             font-size: 15px;
         }
 
         .ico-handshake-angle {
-            font-family: 'Roboto';
+            font-family: "Roboto";
 
             @media screen and (min-width:767px) {
                 min-width: 16%;
@@ -473,7 +380,7 @@ footer {
         }
 
         .ico-handshake-angle::before {
-            font-family: 'Font-awesome-solid';
+            font-family: "Font-Solid";
             content: "\f4c4";
             padding-right: 10px;
             font-size: 11px;
