--- a/SCSS/stylemenu.css
+++ b/SCSS/stylemenu.css
@@ -1,90 +1,80 @@
 @charset "UTF-8";
-
-/***  Variables  ***/
-/*** Fonts ***/
+/**  Variables  **/
+/** FONTS Shrikhand **/
 @font-face {
+  src: url("../assets/fonts/Shrikhand/Shrikhand-Regular.ttf") format("truetype");
   font-family: "Shrikhand";
-  src: url(../assets/fonts/Shrikhand/Shrikhand-Regular.ttf) format("truetype");
 }
-
-/** ROBOTO **/
+/** FONTS Roboto **/
 @font-face {
-  font-family: "Roboto-light";
-  font-weight: 300;
-  src: url(../assets/fonts/Roboto/Roboto-Light.ttf) format("truetype");
-}
-
-@font-face {
+  src: url("../assets/fonts/Roboto/Roboto-Medium.ttf") format("truetype");
   font-family: "Roboto";
   font-weight: 500;
-  src: url(../assets/fonts/Roboto/Roboto-Medium.ttf) format("truetype");
 }
-
 @font-face {
+  src: url("../assets/fonts/Roboto/Roboto-Bold.ttf") format("truetype");
   font-family: "Roboto-bold";
   font-weight: 700;
-  src: url(../assets/fonts/Roboto/Roboto-Bold.ttf) format("truetype");
 }
-
 @font-face {
+  src: url("../assets/fonts/Roboto/Roboto-Regular.ttf") format("truetype");
   font-family: "Roboto-regular";
   font-weight: 400;
-  src: url(../assets/fonts/Roboto/Roboto-Regular.ttf) format("truetype");
 }
-
-/* FONT AWESOME */
 @font-face {
-  font-family: "Font-awesome-solid";
-  src: url(../assets/fonts/fontawesome/fa-solid-900.woff2) format("woff2"), url(../assets/fonts/fontawesome/fa-solid-900.ttf) format("truetype");
+  src: url("../assets/fonts/Roboto/Roboto-Light.ttf") format("truetype");
+  font-family: "Roboto-light";
+  font-weight: 300;
 }
-
+/** FontAwesome **/
 @font-face {
-  font-family: "Font-regular";
-  src: url(../assets/fonts/fontawesome/fa-regular-400.woff2) format("woff2");
+  font-family: "Font-Solid";
+  src: url("../assets/fonts/fontawesome/webfonts/fa-solid-900.ttf") format("truetype"), url("../assets/fonts/fontawesome/webfonts/fa-solid-900.woff2") format("woff2");
 }
-
+@font-face {
+  font-family: "Font-Regular";
+  src: url("../assets/fonts/fontawesome/webfonts/fa-solid-400.ttf") format("truetype"), url("../assets/fonts/fontawesome/webfonts/fa-solid-400.woff2") format("woff2");
+}
 /*** mixin ***/
-/** Heart animation + style**/
 @keyframes menu-content {
   from {
     opacity: 0;
     animation-timing-function: ease-out;
     transform: translateX(-5%);
   }
-
   to {
     transform: translateX(0);
     opacity: 1;
   }
 }
-
 @keyframes fadeout {
   0% {
     opacity: 1;
   }
-
   70% {
     opacity: 1;
     background-color: white;
   }
-
   100% {
     opacity: 0;
     background-color: transparent;
     pointer-events: none;
   }
 }
-
-/***    Général    ***/
+/**    Général    **/
 * {
+  list-style: none;
+  text-decoration: none;
+  scroll-behavior: smooth;
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  vertical-align: baseline;
 }
 
 body {
   background-color: #F6F6F6;
 }
-
 @media screen and (min-width: 1024px) {
   body {
     background-color: #FFF;
@@ -103,7 +93,6 @@ h2 {
   font-size: 16px;
   font-weight: lighter;
 }
-
 h2::after {
   content: "";
   display: block;
@@ -116,11 +105,6 @@ h2::after {
 h3 {
   font-family: "Roboto";
   font-size: 18px;
-  margin: 0;
-}
-
-ul {
-  padding: 0;
 }
 
 li {
@@ -130,45 +114,40 @@ li {
 /***    HEADER   ***/
 header {
   height: 63px;
-  background-color: white;
+  background-color: #FFF;
+}
+header .logo {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
 }
-
-header .logo {
-  width: 100%;
-}
-
 header .logo .link-back {
+  position: relative;
   display: inline-block;
-  padding-left: 23px;
+  padding: 0px 23px 0px 23px;
   text-decoration: none;
   color: #353535;
-  position: relative;
   z-index: 1;
 }
-
 header .logo .logo-img {
   position: absolute;
-  top: 19px;
   display: flex;
   justify-content: center;
   width: 100%;
 }
-
 header .logo img {
   width: 162px;
   height: auto;
 }
 
-/*** Section menu ***/
+/** Section menu **/
 main .menu-image {
   width: 100%;
   height: 275px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
-
 main .menu {
   position: relative;
   display: flex;
@@ -177,16 +156,14 @@ main .menu {
   gap: 40px;
   margin-top: -55px;
   background-color: #F6F6F6;
-  border-radius: 27px 27px 0 0;
+  border-radius: 25px 25px 0 0;
 }
-
 @media screen and (min-width: 1024px) {
   main .menu {
     margin-right: 96px;
     margin-left: 96px;
   }
 }
-
 @media screen and (min-width: 1440px) {
   main .menu {
     margin-right: 192px;
@@ -194,50 +171,16 @@ main .menu {
     padding: 0 210px 0 210px;
   }
 }
-
 main .menu__title {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
   width: 100%;
-  gap: 24px;
+  margin-bottom: 24px;
 }
-
 @media screen and (min-width: 1440px) {
   main .menu__title {
+    display: flex;
     justify-content: center;
   }
 }
-
-main .menu__title .heart2 .anim {
-  width: 21px;
-  overflow: visible;
-  cursor: pointer;
-}
-
-main .menu__title .heart2 .anim path {
-  fill: url(#myGradient);
-  stroke: black;
-  stroke-width: 45px;
-}
-
-main .menu__title .heart2 .anim stop {
-  transition: all 0.25s ease-in-out;
-}
-
-main .menu__title .heart2 .anim path:hover {
-  stroke: transparent;
-  transition: all 0.25s ease-in-out;
-}
-
-main .menu__title .heart2 .anim:hover #myGradient stop:first-child {
-  stop-color: #9356DC;
-}
-
-main .menu__title .heart2 .anim:hover #myGradient stop:last-child {
-  stop-color: #FF79DA;
-}
-
 main .menu .menu-content {
   display: flex;
   flex-direction: column;
@@ -246,13 +189,11 @@ main .menu .menu-content {
   padding: 0 13px 0 13px;
   margin: 0;
 }
-
 main .menu .menu-content .card-list {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
-
 main .menu .menu-content .card-list .card {
   background-color: white;
   border-radius: 15px 15px 15px 15px;
@@ -265,35 +206,26 @@ main .menu .menu-content .card-list .card {
   width: 100%;
   transition: padding 0.25s ease-in-out;
 }
-
 main .menu .menu-content .card-list .card:hover {
   padding-right: 75px;
 }
-
 main .menu .menu-content .card-list .card:hover .right-content .card__click {
   background-color: #99E2D0;
-  width: 59px;
+  width: 60px;
   opacity: 1;
 }
-
-main .menu .menu-content .card-list .card:hover .right-content .card__click i {
-  transform: rotate(359deg);
-}
-
-main .menu .menu-content .card-list .card .texts-wrapper {
+main .menu .menu-content .card-list .card .text-content {
   display: flex;
   flex-direction: column;
   gap: 5px;
   overflow: hidden;
 }
-
-main .menu .menu-content .card-list .card .texts-wrapper h3 {
+main .menu .menu-content .card-list .card .text-content h3 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-main .menu .menu-content .card-list .card .texts-wrapper .note {
+main .menu .menu-content .card-list .card .text-content .description {
   font-family: "Roboto-light";
   font-size: 15px;
   margin: 0;
@@ -301,51 +233,45 @@ main .menu .menu-content .card-list .card .texts-wrapper .note {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 main .menu .menu-content .card-list .card .right-content {
   display: flex;
-  flex-direction: row;
   align-items: flex-end;
   padding-left: 15px;
 }
-
 main .menu .menu-content .card-list .card .right-content .price {
   color: #353535;
   font-family: "Roboto-bold";
   font-size: 15px;
   margin: 0;
 }
-
 main .menu .menu-content .card-list .card .right-content .card__click {
+  position: absolute;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: absolute;
   top: 0;
   right: 0;
   font-size: 20px;
   width: 0;
   height: 100%;
-  transition: 0.5s;
+  transition: 0.25s;
   border-radius: 0 15px 15px 0;
   background-color: #FFF;
   opacity: 0;
 }
-
 main .menu .menu-content .card-list .card .right-content .card__click i {
   color: #FFF;
   display: inline-block;
-  transition: 0.5s ease-in-out;
+  transition: 0.25s ease-in-out;
   transform: rotate(0deg);
 }
-
-main .btn__cta {
+main .btn__main {
   border-radius: 25px;
   padding: 15px 19px;
   font-family: "Roboto-regular";
   font-size: 16px;
   color: white;
+  border: 0px;
   text-decoration: none;
   background: linear-gradient(359deg, #9356DC -11.44%, #FF79DA 123.93%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -354,13 +280,12 @@ main .btn__cta {
   width: 186px;
   margin-bottom: 40px;
 }
-
-main .btn__cta:hover {
+main .btn__main:hover {
   opacity: 90%;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.35));
 }
 
-/***     Animation Menu content "apparition entrée plat dessert"   ***/
+/**     Animation Menu content "apparition entrée plat dessert"   **/
 .starter {
   animation: 1000ms ease-in-out 0.25s 1 normal backwards running menu-content;
 }
@@ -382,7 +307,6 @@ footer {
   padding: 22px 25px 22px 25px;
   gap: 16px;
 }
-
 @media screen and (min-width: 767px) {
   footer {
     flex-direction: row-reverse;
@@ -390,14 +314,12 @@ footer {
     padding: 25px 30px 25px 30px;
   }
 }
-
 footer h3 {
   color: #FFF;
   font-family: "Shrikhand", cursive;
   font-size: 18px;
   margin: 0;
 }
-
 footer ul {
   display: flex;
   flex-direction: column;
@@ -405,7 +327,6 @@ footer ul {
   padding: 0;
   gap: 8px;
 }
-
 @media screen and (min-width: 767px) {
   footer ul {
     flex-direction: row;
@@ -414,55 +335,43 @@ footer ul {
     margin: 30px 0 0 0;
   }
 }
-
 footer ul li {
   list-style-type: none;
 }
-
 @media screen and (min-width: 767px) {
   footer ul li {
     min-width: 11%;
   }
 }
-
 footer ul li a {
   text-decoration: none;
   color: #FFF;
 }
-
 footer ul .ico-ustensils {
   font-family: "Roboto";
 }
-
 @media screen and (min-width: 767px) {
   footer ul .ico-ustensils {
     min-width: 16%;
   }
 }
-
 footer ul .ico-ustensils::before {
   font-family: "Font-awesome-solid";
   content: "\f2e7";
   padding-right: 10px;
   font-size: 15px;
 }
-
 footer ul .ico-handshake-angle {
   font-family: "Roboto";
 }
-
 @media screen and (min-width: 767px) {
   footer ul .ico-handshake-angle {
     min-width: 16%;
-
   }
 }
-
 footer ul .ico-handshake-angle::before {
   font-family: "Font-awesome-solid";
   content: "\f4c4";
   padding-right: 10px;
   font-size: 11px;
-}
-
-/*# sourceMappingURL=stylemenu.css.map */
+}/*# sourceMappingURL=stylemenu.css.map */
