--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -30,6 +30,28 @@ h2 {
     }
 }
 
+/** Loader **/
+
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: variables.$white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeout 2700ms forwards;
+
+    i {
+        color: variables.$first-color;
+    }
+}
+
+
+
 /** Header **/
 header {
     height: 100px;
@@ -299,7 +321,7 @@ header {
     }
 }
 
-/*** Footer ***/
+/** Footer **/
 
 footer {
     display: flex;
@@ -331,7 +353,6 @@ footer {
         display: flex;
         flex-direction: column;
         font-family: "Roboto-light";
-        padding: 0;
         gap: 8px;
 
         @media screen and (min-width:767px) {
@@ -343,14 +364,10 @@ footer {
 
         li {
             list-style-type: none;
+            color: variables.$white;
 
             @media screen and (min-width:767px) {
                 min-width: 11%;
-            }
-
-            a {
-                text-decoration: none;
-                color: variables.$white;
             }
         }
 
@@ -361,13 +378,13 @@ footer {
                 min-width: 16%;
 
             }
-        }
 
-        .ico-tools::before {
-            font-family: "Font-Solid";
-            content: "\f2e7";
-            padding-right: 10px;
-            font-size: 15px;
+            &::before {
+                content: "\f2e7";
+                font-family: "Font-Solid";
+                padding-right: 10px;
+                font-size: 15px;
+            }
         }
 
         .ico-handshake-angle {
@@ -375,16 +392,13 @@ footer {
 
             @media screen and (min-width:767px) {
                 min-width: 16%;
+            }
 
+            &::before {
+                font-family: "Font-Solid";
+                content: "\f4c4";
+                padding-right: 10px;
+                font-size: 11px;
             }
         }
-
-        .ico-handshake-angle::before {
-            font-family: "Font-Solid";
-            content: "\f4c4";
-            padding-right: 10px;
-            font-size: 11px;
-        }
     }
-
-}
