Animation du coeur ok et Footer ok

--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -10,3 +10,6 @@ $medium-grey :#7e7e7e;
 
 $color-label-font: #008766;
 $backgroundcolor: #F6F6F6;
+
+$button-background: linear-gradient(359deg, #9356DC -11.44%, #FF79DA 123.93%);
+;
