--- a/SCSS/stylemenu.css
+++ b/SCSS/stylemenu.css
@@ -61,6 +61,11 @@
     pointer-events: none;
   }
 }
+@keyframes loader {
+  100% {
+    transform: translateY(-60px);
+  }
+}
 /**    Général    **/
 * {
   list-style: none;
@@ -174,12 +179,34 @@ main .menu {
 main .menu__title {
   width: 100%;
   margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 @media screen and (min-width: 1440px) {
   main .menu__title {
     display: flex;
     justify-content: center;
   }
+}
+main .menu__title .card-heart i {
+  position: absolute;
+  font-size: 20px;
+  top: 55%;
+  right: 10%;
+}
+main .menu__title .card-heart .fa-solid {
+  opacity: 0;
+}
+main .menu__title .card-heart .fa-solid:hover {
+  opacity: 1;
+  color: transparent;
+  -webkit-background-clip: text;
+          background-clip: text;
+  --webkit-background-clip: text;
+  transition: all 0.4s ease-in-out;
+  background-image: linear-gradient(359deg, #9356DC -11.44%, #FF79DA 123.93%);
+  overflow: hidden;
 }
 main .menu .menu-content {
   display: flex;
@@ -265,7 +292,8 @@ main .menu .menu-content .card-list .card .right-content .card__click i {
   transition: 0.25s ease-in-out;
   transform: rotate(0deg);
 }
-main .btn__main {
+main button {
+  display: inline-block;
   border-radius: 25px;
   padding: 15px 19px;
   font-family: "Roboto-regular";
@@ -276,11 +304,9 @@ main .btn__main {
   background: linear-gradient(359deg, #9356DC -11.44%, #FF79DA 123.93%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: 300ms;
-  border-width: 0;
   width: 186px;
-  margin-bottom: 40px;
 }
-main .btn__main:hover {
+main button:hover {
   opacity: 90%;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.35));
 }
@@ -334,7 +360,6 @@ footer ul {
   display: flex;
   flex-direction: column;
   font-family: "Roboto-light";
-  padding: 0;
   gap: 8px;
 }
 @media screen and (min-width: 767px) {
@@ -366,8 +391,8 @@ footer ul .ico-tools {
   }
 }
 footer ul .ico-tools::before {
-  font-family: "Font-Solid";
   content: "\f2e7";
+  font-family: "Font-Solid";
   padding-right: 10px;
   font-size: 15px;
 }
@@ -383,5 +408,5 @@ footer ul .ico-handshake-angle::before {
   font-family: "Font-Solid";
   content: "\f4c4";
   padding-right: 10px;
-  font-size: 11px;
+  font-size: 15px;
 }/*# sourceMappingURL=stylemenu.css.map */
