--- a/SCSS/_keyframes.scss
+++ b/SCSS/_keyframes.scss
@@ -30,8 +30,37 @@
     }
 }
 
-@keyframes loader {
+@keyframes circle_loader {
+    0% {
+        top: 60px;
+        height: 5px;
+        border-radius: 50px 50px 25px 25px;
+        transform: scaleX(1.7);
+    }
+
+    40% {
+        height: 20px;
+        border-radius: 50%;
+        transform: scaleX(1);
+    }
+
     100% {
-        transform: translateY(-60px);
+        top: 0%;
+    }
+}
+
+@keyframes shadow_loader {
+    0% {
+        transform: scaleX(1.5);
+    }
+
+    40% {
+        transform: scaleX(1);
+        opacity: 0.7;
+    }
+
+    100% {
+        transform: scaleX(.2);
+        opacity: 0.4;
     }
 }
