--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -61,9 +61,33 @@
     pointer-events: none;
   }
 }
-@keyframes loader {
+@keyframes circle_loader {
+  0% {
+    top: 60px;
+    height: 5px;
+    border-radius: 50px 50px 25px 25px;
+    transform: scaleX(1.7);
+  }
+  40% {
+    height: 20px;
+    border-radius: 50%;
+    transform: scaleX(1);
+  }
   100% {
-    transform: translateY(-60px);
+    top: 0%;
+  }
+}
+@keyframes shadow_loader {
+  0% {
+    transform: scaleX(1.5);
+  }
+  40% {
+    transform: scaleX(1);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scaleX(0.2);
+    opacity: 0.4;
   }
 }
 /** Général **/
@@ -96,35 +120,66 @@ h2 {
 
 /** Loader **/
 .loader {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   background-color: #FFF;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 1s ease-in-out;
   animation: fadeout 2700ms forwards;
 }
-.loader .dot {
+.loader .wrapper {
+  width: 400px;
+  height: 120px;
+  position: relative;
+  z-index: 3;
+}
+.loader .wrapper .circle {
   width: 50px;
   height: 50px;
+  position: absolute;
   border-radius: 50%;
-  margin: 0 15px;
-  animation: loader infinite 0.3s alternate;
-  background: #FFF;
   background-color: #9356dc;
+  left: 15%;
+  transform-origin: 50%;
+  animation: circle_loader 0.5s alternate infinite ease;
 }
-.loader .d2 {
-  animation-delay: 0.05s;
+.loader .wrapper .circle:nth-child(2) {
   background-color: #FF79DA;
+  left: 45%;
+  animation-delay: 0.2s;
 }
-.loader .d3 {
-  animation-delay: 0.1s;
+.loader .wrapper .circle:nth-child(3) {
   background-color: #99E2D0;
+  left: auto;
+  right: 15%;
+  animation-delay: 0.3s;
+}
+.loader .wrapper .shadow {
+  width: 50px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 62px;
+  transform-origin: 50%;
+  z-index: -1;
+  left: 15%;
+  filter: blur(1px);
+  animation: shadow_loader 0.5s alternate infinite ease;
+}
+.loader .wrapper .shadow:nth-child(4) {
+  left: 45%;
+  animation-delay: 0.2s;
+}
+.loader .wrapper .shadow:nth-child(5) {
+  left: auto;
+  right: 15%;
+  animation-delay: 0.3s;
 }
 
 /** Header **/
@@ -211,7 +266,7 @@ header .localisation i {
   background-color: #FFF;
   display: flex;
   flex-direction: column;
-  padding: 48px 0 68px 0;
+  padding: 48px 0 68px 10px;
 }
 @media screen and (min-width: 1024px) {
   .section-fonctionnement {
@@ -375,6 +430,10 @@ header .localisation i {
   padding: 0 0 16px 16px;
   position: relative;
   /** Animation du coeur **/
+}
+.section-restaurants .restaurants-contents .card .card-second-section a {
+  text-decoration: none;
+  color: #000;
 }
 .section-restaurants .restaurants-contents .card .card-second-section .card-title {
   font-family: "Roboto-bold";
