--- a/SCSS/stylemenu.scss
+++ b/SCSS/stylemenu.scss
@@ -122,7 +122,7 @@ main {
             margin-bottom: 24px;
             display: flex;
             align-items: center;
-            position: relative;
+
 
             @media screen and (min-width:1440px) {
                 display: flex;
@@ -130,12 +130,18 @@ main {
             }
 
             .card-heart {
+                width: 20%;
+                height: 100%;
 
                 i {
                     position: absolute;
                     font-size: 20px;
-                    top: 55%;
-                    right: 10%;
+                    top: 42px;
+                    left: 310px;
+
+                    @media screen and (min-width:1440px) {
+                        left: 58%;
+                    }
                 }
 
                 .fa-solid {
