--- a/SCSS/stylemenu.css
+++ b/SCSS/stylemenu.css
@@ -236,6 +236,7 @@ main .menu__title .card-heart .fa-solid:hover {
   -webkit-background-clip: text;
           background-clip: text;
   --webkit-background-clip: text;
+  --moz-background-clip: text;
   transition: all 0.4s ease-in-out;
   background-image: linear-gradient(359deg, #9356DC -11.44%, #FF79DA 123.93%);
   overflow: hidden;
