--- a/SCSS/stylemenu.scss
+++ b/SCSS/stylemenu.scss
@@ -152,6 +152,7 @@ main {
                         color: transparent;
                         background-clip: text;
                         --webkit-background-clip: text;
+                        --moz-background-clip: text;
                         transition: all 0.4s ease-in-out;
                         background-image: variables.$button-background;
                         overflow: hidden;
