--- a/SCSS/stylemenu.css
+++ b/SCSS/stylemenu.css
@@ -35,7 +35,8 @@
   font-family: "Font-Regular";
   src: url("../assets/fonts/fontawesome/webfonts/fa-solid-400.ttf") format("truetype"), url("../assets/fonts/fontawesome/webfonts/fa-solid-400.woff2") format("woff2");
 }
-/*** mixin ***/
+/**  Mixins  **/
+/**  Keyframes  **/
 @keyframes menu-content {
   from {
     opacity: 0;
@@ -77,6 +78,9 @@
     top: 0%;
   }
 }
+/**  Animations  **/
+/** Animation du coeur **/
+/** Animations entrées - plats - desserts  **/
 /**    Général    **/
 * {
   list-style: none;
@@ -158,6 +162,10 @@ header .logo img {
 }
 
 /** Section menu **/
+main {
+  /** Animations entrées - plats - desserts  **/
+  /** Footer **/
+}
 main .menu-image {
   width: 100%;
   height: 275px;
@@ -330,26 +338,19 @@ main button:hover {
   opacity: 90%;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.35));
 }
-
-/** Animations entrées - plats - desserts  **/
-.starter {
+main .starter {
   animation: 1000ms ease-in-out 0.4s 1 normal backwards running menu-content;
 }
-
-.dish {
+main .dish {
   animation: 1000ms ease-in-out 0.85s 1 normal backwards running menu-content;
 }
-
-.dessert {
+main .dessert {
   animation: 1000ms ease-in-out 1.15s 1 normal backwards running menu-content;
 }
-
-.anim_button {
+main .anim_button {
   animation: 1000ms ease-in-out 1.3s 1 normal backwards running menu-content;
 }
-
-/** Footer **/
-footer {
+main footer {
   display: flex;
   flex-direction: column;
   background-color: #353535;
@@ -358,73 +359,73 @@ footer {
   margin-top: 60px;
 }
 @media screen and (min-width: 767px) {
-  footer {
+  main footer {
     flex-direction: row-reverse;
     align-items: flex-end;
     padding: 25px 30px 25px 30px;
     margin-top: 30px;
   }
 }
-footer h3 {
+main footer h3 {
   color: #FFF;
   font-family: "Shrikhand", cursive;
   font-size: 18px;
   margin: 0;
 }
 @media screen and (min-width: 767px) {
-  footer h3 {
+  main footer h3 {
     margin-left: 16px;
   }
 }
-footer ul {
+main footer ul {
   display: flex;
   flex-direction: column;
   font-family: "Roboto-light";
   gap: 8px;
 }
 @media screen and (min-width: 767px) {
-  footer ul {
+  main footer ul {
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
     margin: 30px 0 0 0;
   }
 }
-footer ul li {
+main footer ul li {
   list-style-type: none;
 }
 @media screen and (min-width: 767px) {
-  footer ul li {
+  main footer ul li {
     min-width: 11%;
   }
 }
-footer ul li a {
+main footer ul li a {
   text-decoration: none;
   color: #FFF;
 }
-footer ul .ico-tools {
+main footer ul .ico-tools {
   font-family: "Roboto";
 }
 @media screen and (min-width: 767px) {
-  footer ul .ico-tools {
+  main footer ul .ico-tools {
     min-width: 16%;
   }
 }
-footer ul .ico-tools::before {
+main footer ul .ico-tools::before {
   content: "\f2e7";
   font-family: "Font-Solid";
   padding-right: 10px;
   font-size: 15px;
 }
-footer ul .ico-handshake-angle {
+main footer ul .ico-handshake-angle {
   font-family: "Roboto";
 }
 @media screen and (min-width: 767px) {
-  footer ul .ico-handshake-angle {
+  main footer ul .ico-handshake-angle {
     min-width: 16%;
   }
 }
-footer ul .ico-handshake-angle::before {
+main footer ul .ico-handshake-angle::before {
   font-family: "Font-Solid";
   content: "\f4c4";
   padding-right: 10px;
